[package]
name = "takehome_hunt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
statistical = "1.0.0"

